--- a/spotify/src/index.css
+++ b/spotify/src/index.css
@@ -1,15 +1,15 @@
+/* General Body Styles */
 body {
-  /* background-color: #121212; */
   background-image: url(./img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  /* background-image: url(/img/bg2.jpg); */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
+/* Navbar */
 .g1 {
   display: flex;
   align-items: center;
@@ -17,18 +17,12 @@ body {
   height: 70px;
   background-color: black;
   padding: 0 20px;
-  justify-content:space-between;
-  
+  justify-content: space-between;
 }
 
 .g1 li {
   padding: 0 12px;
   cursor: pointer;
-}
-
-.brand img {
-  width: 44px;
-  padding-right: 10px;
 }
 
 .brand {
@@ -39,6 +33,12 @@ body {
   color: red;
 }
 
+.brand img {
+  width: 44px;
+  padding-right: 10px;
+}
+
+/* Main Content */
 .page {
   min-height: 75vh;
   display: flex;
@@ -59,10 +59,11 @@ body {
   width: 100%;
 }
 
+/* Song List */
 .s1 {
   display: flex;
   align-items: center;
-  background-color:transparent;
+  background-color: transparent;
   width: 100%;
   color: white;
   margin: 8px 0;
@@ -73,15 +74,35 @@ body {
 }
 
 .s1:hover {
-  background-color:rgba(0, 0, 0, 0.641);
+  background-color: rgba(0, 0, 0, 0.7);
   color: red;
 }
 
-.s1 span {
-  margin-left: 10px;
-  background-color: transparent;
+/* Active Song Effect */
+.s1.active {
+  background-color: rgba(29, 185, 84, 0.8);
+  color: white;
+  font-weight: bold;
+  transition: 0.3s ease-in-out;
 }
 
+/* Playing Indicator */
+.playing-effect {
+  width: 12px;
+  height: 12px;
+  background-color: #1db954;
+  border-radius: 50%;
+  margin-left: 10px;
+  animation: pulse 1.2s infinite;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 0.7; }
+  50% { transform: scale(1.5); opacity: 1; }
+  100% { transform: scale(1); opacity: 0.7; }
+}
+
+/* Bottom Music Player */
 .bottom {
   position: fixed;
   bottom: 0;
@@ -95,6 +116,7 @@ body {
   justify-content: center;
 }
 
+/* Player Controls */
 .icons i {
   cursor: pointer;
   margin: 0 15px;
@@ -102,66 +124,28 @@ body {
 }
 
 .icons i:hover {
-  color: #1DB954;
+  color: #1db954;
   transform: scale(1.1);
 }
 
-#myProgressBar {
-  width: 80vw;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
+/* Song Info */
 .songInfo {
   font-size: 18px;
   font-weight: bold;
   animation: fadeIn 1s ease-in-out;
 }
 
+/* Animations */
 @keyframes fadeIn {
   from {
-      opacity: 0;
+    opacity: 0;
   }
-
   to {
-      opacity: 1;
+    opacity: 1;
   }
 }
 
-a {
-  text-decoration: none;
-  color: red;
-  font-size: 25px;
-}
-h1{
-  align-self: center;
-}
-
-#root{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items:normal;
-}
-.playing {
-  color: #1db954;
-  font-weight: bold;
-}
-
-.playing-effect {
-  width: 10px;
-  height: 10px;
-  background-color: #1db954;
-  border-radius: 50%;
-  animation: pulse 1.2s infinite;
-}
-
-@keyframes pulse {
-  0% { transform: scale(1); opacity: 0.7; }
-  50% { transform: scale(1.5); opacity: 1; }
-  100% { transform: scale(1); opacity: 0.7; }
-}
-
+/* Bottom Controls */
 .bottom-controls {
   position: fixed;
   bottom: 0;
@@ -170,7 +154,37 @@ h1{
   height: 100px;
   background-color: black;
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   justify-content: space-evenly;
+}
+
+/* Progress Bar */
+#myProgressBar {
+  width: 80vw;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+/* Links */
+a {
+  text-decoration: none;
+  color: red;
+  font-size: 25px;
+}
+
+/* Headings */
+h1 {
+  align-self: center;
+}
+
+/* Root Element */
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: normal;
+}
+.playing {
+  color: #1db954;
+  font-weight: bold;
 }
