--- a/spotify/src/index.css
+++ b/spotify/src/index.css
@@ -171,7 +171,7 @@ i{
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  overflow: scroll;
+  overflow-y: hidden;
   overflow: scroll; /* Enables scrolling */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
