--- a/spotify/src/App.css
+++ b/spotify/src/App.css
@@ -154,11 +154,11 @@ body {
 /* ✅ Song Group */
 .song-group {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 15px;
+  gap: 10px;
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 10px;
   max-width:90%;
